[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-alpha.8'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0-alpha.8'

[dependencies.sc-basic-authorship]


version = '0.8.0-alpha.8'

[dependencies.sc-cli]


version = '0.8.0-alpha.8'

[dependencies.sc-client-api]


version = '2.0.0-alpha.8'

[dependencies.sc-consensus]


version = '0.8.0-alpha.8'

[dependencies.sc-consensus-aura]


version = '0.8.0-alpha.8'

[dependencies.sc-executor]


version = '0.8.0-alpha.8'

[dependencies.sc-finality-grandpa]


version = '0.8.0-alpha.8'

[dependencies.sc-network]


version = '0.8.0-alpha.8'

[dependencies.sc-service]


version = '0.8.0-alpha.8'

[dependencies.sc-transaction-pool]


version = '2.0.0-alpha.8'

[dependencies.sp-consensus]


version = '0.8.0-alpha.8'

[dependencies.sp-consensus-aura]


version = '0.8.0-alpha.8'

[dependencies.sp-core]


version = '2.0.0-alpha.8'

[dependencies.sp-finality-grandpa]


version = '2.0.0-alpha.8'

[dependencies.sp-inherents]


version = '2.0.0-alpha.8'

[dependencies.sp-runtime]


version = '2.0.0-alpha.8'

[dependencies.sp-transaction-pool]


version = '2.0.0-alpha.8'

[build-dependencies.substrate-build-script-utils]


version = '2.0.0-alpha.8'

[[bin]]
name = 'node-template'
